Fixed spacing issues on footer

--- a/css/queries.css
+++ b/css/queries.css
@@ -64,5 +64,7 @@
 
   .footer__container-list {
     padding: 0.5rem;
+    margin-bottom: 1.5rem;
+    padding-right: 2rem;
   }
 }
