--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,7 @@ ul {
 
 .directory__list-item figure img {
   width: 100%;
+  height: auto;
 }
 
 .directory__list-item--text-content h3 {
